fix(page-title-bar): fix bottom alignment in dynamic mode

--- a/packages/react/src/components/PageTitleBar/_page-title-bar.scss
+++ b/packages/react/src/components/PageTitleBar/_page-title-bar.scss
@@ -164,7 +164,6 @@
       overflow: hidden;
       transition: all $duration--fast-02;
       border-bottom: 1px solid transparent;
-      margin-bottom: -1px;
     }
 
     .page-title-bar--dynamic--during &,
